# subscript-compiler

./: .gitignore  Cargo.toml  README.md  build.sh  nested.txt  notes.txt  pdf-example.html  run.sh  source-backup.txt  source.txt  syntax.txt
assets/: deps.html  styling.css  styling.css.map  template.html  template.html.txt
examples/: bad_path.rs  chemistry.txt  electrical-engineering.txt  frontend.rs  highlight.rs  html.rs  mathematics.txt  parse_error.rs  parser.rs  toc.rs
examples/other/: bad-path.txt  invalid.txt  valid.txt
examples/source/: electrical-engineering.txt
scripts/: build-styles.sh
scripts/dev/: run.sh
scripts/test-site/: build.sh  open.sh
src/: ast.rs  backend.rs  cli.rs  compiler.rs  frontend.rs  lib.rs  main.rs  parser.rs  parser_utils.rs  pipeline.rs
src/backend/: ast.rs  data.rs  math.rs  mod.rs  passes.rs  query.rs  tags.rs
src/codegen/: html.rs  mod.rs
src/compiler/: data.rs
src/frontend/: ast.rs  data.rs  math.rs  mod.rs  parser.rs  passes.rs  query.rs  tags.rs
src/frontend/pass/: html_normalize.rs  math.rs  mod.rs  pp_normalize.rs  to_html.rs
src/parser/: ast.rs
styles/: base.scss  index.scss  layout.scss  macros.scss  main.scss  nav.scss  typography.scss
test/: complex-unicode.txt
